--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@react-hook/window-size": "^3.1.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "framer-motion": "^10.0.0",
     "next": "13.2.1",
+    "normalize-wheel": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-use": "^17.4.0",
     "sass": "^1.58.3"
   }
 }
